Arguments to strcmp need to be null-terminated.  b=228688  r+sr=jst  a=chofmann